bug:debugging y axis overflow in the webpage

--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,19 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 body{
   font-family: "Montserrat";
   background-color: #f0f0f0;
-  width: 100vw;
+ 
 }
 
 .main{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
- /* background-color: green; */
+
   width: 100%;
-  /* overflow: hidden; */
 }
 
 header {
@@ -47,11 +47,11 @@ header {
   color: white;
   height: 60px;
   width: 100%;
-  max-width: 100%;
+  /* max-width: 100%; */
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 1;
   background-color: transparent;
   font-weight: 300;
 }
@@ -87,12 +87,12 @@ header {
   border-radius: 5px;
 }
 .hero-content{
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  /* background-color: yellow; */
 }
 .hero-content > h1 {
   font-size: 50px;
@@ -136,22 +136,30 @@ header {
 }
 
 .top-cards {
-  margin-top: -80px;
-  width: 100%;
-  /* height: 300px; */
-  padding-bottom: 50px;
   display: flex;
-  gap: 40px;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: -80px;
+  width: 100%;
+  padding-bottom: 50px;
+  gap: 40px;
+  
 }
-
-.peace-card {
+.user-card{
   background-color: white;
   padding: 40px;
   width: 350px;
-  z-index: 100;
+  /* z-index: 100; */
   box-shadow: 0 15px 35px #aaaaaa40;
+}
+.user-card:hover{
+  background: var(--primary-color);
+  padding: 40px;
+  width: 350px;
+  /* z-index: 100; */
+  color: white;
+  box-shadow: 0 15px 35px #aaaaaa40;
+  cursor: pointer;
 }
 
 .peace-card > img {
@@ -162,29 +170,17 @@ header {
   margin: 20px 20px 20px 0;
 }
 
-.life-card {
-  background-color: white;
-  padding: 40px;
-  width: 350px;
-  z-index: 100;
-  box-shadow: 0 15px 35px #aaaaaa40;
-}
 .life-card > img {
   margin: 0 30px;
+ 
 }
 .life-card > h2 {
   margin: 20px 20px 20px 0;
 }
-.satisfaction-card {
-  background: var(--primary-color);
-  padding: 40px;
-  width: 350px;
-  z-index: 100;
-  color: white;
-  box-shadow: 0 15px 35px #aaaaaa40;
-}
+
 .satisfaction-card > img {
   margin: 0 30px;
+   /* background-color: #23a6f0; */
 }
 .satisfaction-card > h2 {
   margin: 20px 20px 20px 0;
@@ -192,10 +188,11 @@ header {
 
 .icons-cards {
   /* padding-top: 40px; */
+  display: flex;
   background-color: white;
   width: 100%;
-  /* height: 400px; */
-  display: flex;
+  height: 400px;
+  
   gap: 40px;
   justify-content: center;
   flex-wrap: wrap;
@@ -223,28 +220,34 @@ header {
   text-align: center;
 }
 .industry {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100vw;
   text-align: center;
   padding: 50px 0;
-  /* flex-direction: column;
-  display: flex;
-  flex-wrap: wrap; */
+ 
 }
 .industry > h2 {
   margin: 20px 0;
 }
-.review-row {
+
+.review-row{
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  width: 100vw;
+
 }
+
 .reviews {
-  /* width: 80%; */
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, 1fr);
   grid-template-areas:
     "firstc secondc thirdc"
     "firstc secondc thirdc";
-  gap: 50px;
+  gap: 40px;
   margin-top: 10px;
   padding: 20px;
   flex-wrap: wrap;
@@ -288,9 +291,11 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 90px;
   margin: 10px;
   padding: 20px;
+  width: 100vw;
 }
 .subscribe-main {
   display: flex;
@@ -325,7 +330,6 @@ header {
   background: var(--primary-color);
   padding: 17px 20px;
   border-radius: 0 5px 5px 0;
-  /* outline: 1px solid white; */
   color: white;
 }
 
@@ -363,10 +367,8 @@ header {
   height: 500px;
   padding: 20px;
   border-radius: 5px;
-  /* font-size: 20px; */
 }
 .superscript {
-  /* vertical-align: super; */
   font-size: 15px;
   font-weight: 300;
 }
@@ -379,7 +381,6 @@ header {
   font-weight: 500;
 }
 .subscript {
-  /* vertical-align: sub; */
   font-size: 15px;
   font-weight: 300;
 }
@@ -440,7 +441,6 @@ border-radius: 5px;
   display: flex;
   justify-content: center;
   padding-top: 70px;
-  /* align-items: center; */
   background-color: rgb(37,43,66);
   color: white;
   height: 550px;
@@ -463,20 +463,19 @@ border-radius: 5px;
 
 .form{
   background-color: white;
-  padding: 30px;
+  padding: 20px 20px 0px 20px;
   width: 30%;
-  /* text-align: center; */
 }
 
 .form>h4{
   text-align: center;
+  font-size: 20px;
 }
 
 .inputholder{
   display: flex;
   flex-direction: column;
-  /* gap: 2px; */
-  margin: 20px 0;
+  margin: 20px 0 5px 0;
 }
 
 .inputholder>input{
@@ -511,17 +510,22 @@ border-radius: 5px;
   border: none;
   outline: none;
 }
+
+/* Footer styling */
+
 footer{
   background-color: white;
-  width: 100%;
   padding: 20px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 300;
 }
+
+
 .footer-top{
   display: flex;
   justify-content: space-around;
   margin: 20px 0px 0px 10px;
+  flex-wrap: wrap;
   
 }
 
@@ -531,15 +535,35 @@ footer{
   gap: 8px;
 }
 
+
+.icons-intouch{
+  display: flex;
+  align-items: center;
+}
+
+.footer-title{
+  font-size: 18px;
+  font-weight: 500;
+}
+
 .footer-bottom{
   display: flex;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 0 50px;
+  margin-top: 15px;
 }
+
+
 .list{
+  margin-top: 10px;
+  margin-bottom: 15px;
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
 
+
+@media screen and (max-width="375"){
+
+};
